e-embed-prefs: remove spaces in Accept-Language

Some servers, like Babel, do not correctly sanitize the string in this
header. They expect strings without spaces, even though the RFC includes
them.

Chrome and Firefox do not use spaces, presumably because many more
websites break when using them.

https://bugzilla.gnome.org/show_bug.cgi?id=671652